# fastapi-udemy-for-studants-project2

./: .env  .gitingore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 0f825c59bfbf_add_categories_table.py  bd6941a47d35_add_products_table.py  deb5fd621699_add_users_table.py
app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schemas.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_product_user_cases.py  test_user_use_cases.py
app/use_cases/: category.py  poc.py  product.py  user.py
